--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -1,12 +1,38 @@
 <h1 id="hedy">GPX Data</h1>
+
+<div>
+	<h2>New GPX</h2>
+	<label for="gpx_data">
+		Data:
+		<input type="file" id="files" name="file"  />
+	</label>
+	<output id="list"></output>
+</div>
+
 <div id="content" class="container">
 
 </div>
-<svg width=600 height=400 class="outside-svg"></svg>
+<svg width=1200 height=400 class="outside-svg"></svg>
 <script>
+var reader = new FileReader();
 $(function(){
+	
+	function handleFileSelect(evt) {
+	    file = evt.target.files; // FileList object
+	  	reader.readAsText(file[0]);
+	};
+	
+	reader.onload = function (evt){
+		
+		var gpx = new CA.Models.Gpx({
+			data : evt.target.result
+		});
+		gpx.save();
+	};
+	
+	document.getElementById('files').addEventListener('change', handleFileSelect, false);
 
-	var gpxes = <%= @gpxes.to_json.html_safe %>
+	var gpxes = <%= @gpxes.to_json.html_safe %>;
 	
 	var $rootEl = $('#content');
 	
