--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -12,6 +12,7 @@
 <div id="content" class="container">
 
 </div>
+<div id="map"></div>
 <svg width=1600 height=400 class="outside-svg"></svg>
 <script>
 var reader = new FileReader();
