--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -12,8 +12,20 @@
 <div id="content" class="container">
 
 </div>
-<div id="map"></div>
-<svg width=1600 height=400 class="outside-svg"></svg>
+<div id= "graph-details" class="container">
+	<div class="row">
+		<div class="span8 offset2">
+			<div id="map"></div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="span8 offset 2">
+			<svg width=1200 height=300 class="outside-svg"></svg>
+		</div>
+	</div>
+	
+</div>
+
 <script>
 var reader = new FileReader();
 $(function(){
