--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,35 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<div id="user_nav">
-  <% if user_signed_in? %>
-    Signed in as <%= current_user.email %>. Not you?
-    <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-  <% else %>
-    <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
-  <% end %>
-</div>
+	<header id="user_nav" class="navbar navbar-fixed-top navbar-inverse">
+	      <div class="navbar-inner">
+	        <div class="container">
+	          <%= link_to "CyclingApp", '#', id: "logo" %>
+	          <nav>
+	            <ul class="nav pull-right">
+	              <li><%= link_to "Home", '#' %></li>
+	              <li><%= link_to "Help",    '#' %></li>
+	              <li>
+					  <% if user_signed_in? %>
+		    		  	<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+		 			  <% else %>
+					    <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in", new_user_session_path %>
+					  <% end %>
+				  </li>
+				  <% if user_signed_in? %>
+	              	<li>
+					  <div id="file" class="btn">GPX Upload</div>
+				  	</li>
+				  <% end %>
+				  
+				  	
+	            </ul>
+	          </nav>
+	        </div>
+	      </div>
+	    </header>
+
+
 
 
 	<%= yield %>
