--- a/app/assets/stylesheets/z_custom.css
+++ b/app/assets/stylesheets/z_custom.css
@@ -7,3 +7,40 @@
 #files {
     display:none;
 }
+
+.username {
+	color: white;
+}
+
+#tab2 {
+	overflow-x: hidden;
+}
+
+.map {
+    float: left;
+    width: 512px;
+    height: 300px;
+    background-color: #ccc;
+    margin: 0;
+}
+
+.map .controls { visibility: hidden; }
+.map:hover .controls { visibility: visible; }
+
+.map .label {
+    font-family: "Courier New", monospace;
+    font-size: 13px;
+    line-height: 16px;
+
+    color: #fff;
+    background-color: #000;
+    background-color: rgba(0,0,0,.6);
+    border-radius: 5px;
+
+    padding: 4px 6px;
+
+    position: absolute;
+    bottom: 4px;
+    left: 4px;
+    z-index: 100;
+}
