right before I add path function

--- a/app/assets/stylesheets/gpxes.css.scss
+++ b/app/assets/stylesheets/gpxes.css.scss
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   padding-top: 60px;
 }
 
@@ -54,6 +55,7 @@ p {
 }
 
 #logo {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   float: left;
   margin-right: 10px;
   font-size: 1.7em;
@@ -66,6 +68,7 @@ p {
 }
 
 #logo:hover {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   color: #fff;
   text-decoration: none;
 }
