--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -23,9 +23,28 @@
 				<div class="span2">
 					<div id="map"></div>
 				</div>
+				<div class="span7 offset3 top-detail">
+					<div class="row">
+						<div class="span2 offset">
+							<h3 class="info">Speed: <div class="speed">0.0 MPH</div> </h3>
+						</div>
+						
+					</div>
+					<div class="row">
+						<div class="span2 offset">
+							<h3 class="info">Elevation: <div class="elevation">0.0 FT</div> </h3>
+						</div>
+					</div>
+					<div class="row">
+						<div class="span2 offset">
+							<h3 class="info">Distance: <div class="dist">0.0 MILES</div> </h3>
+						</div>
+
+					</div>
+					<div class="row"></div>
+				</div>
 			</div>
 			<div class="row">
-
 				<div class="span6">
 					<svg width=1200 height=300 class="outside-svg"></svg>
 				</div>
