--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -46,7 +46,9 @@
 			</div>
 			<div class="row">
 				<div class="span6">
-					<svg width=1200 height=300 class="outside-svg"></svg>
+					<svg width=1200 height=300 class="outside-svg">
+				  	
+					</svg>
 				</div>
 			</div>	
 		</div>
