--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -3,6 +3,7 @@
     <ul class="nav nav-tabs index-tab">
       <li class="active"><a href="#tab1" data-toggle="tab">Feed</a></li>
       <li><a href="#tab2" data-toggle="tab">Stats</a></li>
+	   <li><a href="#tab3" data-toggle="tab">Map</a></li>
     	  <li class="dropdown pull-right">
     	     <a class="dropdown-toggle"
     	        data-toggle="dropdown"
@@ -23,7 +24,7 @@
 				<div class="span2">
 					<div id="map"></div>
 				</div>
-				<div class="span7 offset3 top-detail">
+				<div class="span3 offset3 top-detail">
 					<div class="row">
 						<div class="span2 offset">
 							<h3 class="info">Speed: <div class="speed">0.0 MPH</div> </h3>
@@ -41,7 +42,9 @@
 						</div>
 
 					</div>
-					<div class="row"></div>
+				</div>
+				<div class="span4 offset5">
+					    <div id="pano"></div>
 				</div>
 			</div>
 			<div class="row">
@@ -54,7 +57,6 @@
 		</div>
     </div>
     <div class="tab-pane" id="tab3">
-      <p>Howdy, I'm in Section 3.</p>
     </div>
   </div>
 </div>
