add map capture

--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -57,9 +57,12 @@
 		</div>
     </div>
     <div class="tab-pane" id="tab3">
+		<div id="canvas-div"></div>
+		
     </div>
   </div>
 </div>
+<canvas id="tester" height=600 width=1000 ></canvas>
 </div>
 <div id="content" class="container">
 
