before adding trk_data

--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -63,6 +63,7 @@
   </div>
 </div>
 <canvas id="tester" height=600 width=1000 ></canvas>
+<canvas id="temp-map" height=256 width=256 ></canvas>
 </div>
 <div id="content" class="container">
 
