--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -3,7 +3,6 @@
     <ul class="nav nav-tabs index-tab">
       <li class="active"><a href="#tab1" data-toggle="tab">Feed</a></li>
       <li><a href="#tab2" data-toggle="tab">Stats</a></li>
-	   <li><a href="#tab3" data-toggle="tab">Map</a></li>
     	  <li class="dropdown pull-right">
     	     <a class="dropdown-toggle"
     	        data-toggle="dropdown"
@@ -17,6 +16,7 @@
     </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
+		<div id="feed-container"></div>
     </div>
     <div class="tab-pane" id="tab2">
 		<div id= "graph-details" class="container">
@@ -57,13 +57,13 @@
 		</div>
     </div>
     <div class="tab-pane" id="tab3">
-		<div id="canvas-div"></div>
-		
+		<div id="canvas-div" display="none"></div>
     </div>
   </div>
 </div>
-<canvas id="tester" height=600 width=1000 ></canvas>
-<canvas id="temp-map" height=256 width=256 ></canvas>
+
+<!-- <canvas id="tester" height=600 width=1000 ></canvas>
+<canvas id="temp-map" height=256 width=256 ></canvas> -->
 </div>
 <div id="content" class="container">
 
@@ -77,6 +77,7 @@ $(function(){
 	CA.Store.Map = L.map('map');
 	L.Icon.Default.imagePath = "/assets";
 	CA.Store.Marker = L.marker([0,0]).addTo(CA.Store.Map);
+	
 	
 	var pos = new google.maps.LatLng( 0, 0);
 
