--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 <div class="tabbable"> <!-- Only required for left/right tabs -->
+	
     <ul class="nav nav-tabs index-tab">
       <li class="active"><a href="#tab1" data-toggle="tab">Feed</a></li>
       <li><a href="#tab2" data-toggle="tab">Stats</a></li>
@@ -11,9 +12,11 @@
     	         <b class="caret"></b>
     	       </a>
     	     <ul class="dropdown-menu gpx-menu">
+				 <!-- backbone generated list -->
     	     </ul>
     	   </li>
     </ul>
+	
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
 		<div id="feed-container"></div>
@@ -22,14 +25,13 @@
 		<div id= "graph-details" class="container">
 			<div class="row">
 				<div class="span2">
-					<div id="map"></div>
+					<div id="map"><!-- Leaflet generated map here --></div>
 				</div>
 				<div class="span3 offset3 top-detail">
 					<div class="row">
 						<div class="span2 offset">
 							<h3 class="info">Speed: <div class="speed">0.0 MPH</div> </h3>
 						</div>
-						
 					</div>
 					<div class="row">
 						<div class="span2 offset">
@@ -40,11 +42,9 @@
 						<div class="span2 offset">
 							<h3 class="info">Distance: <div class="dist">0.0 MILES</div> </h3>
 						</div>
-
 					</div>
 				</div>
-				<div class="span4 offset5">
-					    <div id="pano"></div>
+					<div class="span4 offset5">
 				</div>
 			</div>
 			<div class="row">
@@ -56,20 +56,34 @@
 			</div>	
 		</div>
     </div>
-    <div class="tab-pane" id="tab3">
-		<div id="canvas-div" display="none"></div>
-    </div>
   </div>
 </div>
 
-<!-- <canvas id="tester" height=600 width=1000 ></canvas>
-<canvas id="temp-map" height=256 width=256 ></canvas> -->
 </div>
-<div id="content" class="container">
+	
+   
+<div id="panoModal" class="modal hide fade"  aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Modal header</h3>
+  </div>
+  <div class="modal-body">
+	  	  <div id="pano"></div> 
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
+</div>
+
+<div class='no-display'>
+	<a href="#panoModal" role="button" id="pano-modal-btn" class="btn" data-toggle="modal">Street View</a>
+	<div id="canvas-div" display="none"></div>
+	<input type="file" id="files" name="file" />
+</div>
 
 </div>
 
-<input type="file" id="files" name="file" />
+
 <script>
 $(function(){
 	
@@ -77,7 +91,7 @@ $(function(){
 	CA.Store.Map = L.map('map');
 	L.Icon.Default.imagePath = "/assets";
 	CA.Store.Marker = L.marker([0,0]).addTo(CA.Store.Map);
-	
+	CA.Store.Marker.bindPopup("Street View!");
 	
 	var pos = new google.maps.LatLng( 0, 0);
 
@@ -90,6 +104,34 @@ $(function(){
     };
 	
     CA.Store.Panorama = new  google.maps.StreetViewPanorama(document.getElementById('pano'),panoramaOptions);
+	
+	$('#panoModal').on('show', function(){
+		window.setTimeout(function(){ 
+			google.maps.event.trigger(CA.Store.Panorama, 'resize'); 
+		}, 500 );
+	});
+	
+	$('#panoModal').on('hidden', function(){
+		
+		window.setTimeout(function(){ 
+			google.maps.event.trigger(CA.Store.Panorama, 'resize'); 
+			$('.outside-svg').click();
+		}, 2000 );
+	});
+	
+	
+	// $('#pano-modal-btn').click(function() {
+	// 
+	// });
+	
+	
+    // $('#panoModal').css({
+    //     width: "800",
+    //     'margin-left': function () {
+    //         return -($(this).width() / 2);
+    //     }
+    // });
+	
 
 	var gpxes = <%= @gpxes.to_json.html_safe %>;
 	
