add responsive graph

--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -24,22 +24,22 @@
     <div class="tab-pane" id="tab2">
 		<div id= "graph-details" class="container">
 			<div class="row">
-				<div class="span2">
+				<div class="span6">
 					<div id="map"><!-- Leaflet generated map here --></div>
 				</div>
-				<div class="span3 offset3 top-detail">
+				<div class="span3 top-detail">
 					<div class="row">
-						<div class="span2 offset">
+						<div class="span1 offset">
 							<h3 class="info">Speed: <div class="speed">0.0 MPH</div> </h3>
 						</div>
 					</div>
 					<div class="row">
-						<div class="span2 offset">
+						<div class="span1 offset">
 							<h3 class="info">Elevation: <div class="elevation">0.0 FT</div> </h3>
 						</div>
 					</div>
 					<div class="row">
-						<div class="span2 offset">
+						<div class="span1 offset">
 							<h3 class="info">Distance: <div class="dist">0.0 MILES</div> </h3>
 						</div>
 					</div>
@@ -48,8 +48,8 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="span6">
-					<svg width=1200 height=200 class="outside-svg">
+				<div class="span12">
+					<svg width=100% height=200 class="outside-svg">
 				  	
 					</svg>
 				</div>
