--- a/app/assets/stylesheets/z_custom.css
+++ b/app/assets/stylesheets/z_custom.css
@@ -3,6 +3,10 @@
 	width: auto;
 }
 
+body {
+    padding-top: 0px;
+  }
+
 
 #files {
     display:none;
@@ -29,7 +33,7 @@
 	position: inline-block;
 	max-width: none;
 	width: auto; 
-	height: 400px;
+	height: 300px;
 	background-color: rgb(229,227,223);
 	margin-left: auto;
 	margin-right: auto;
@@ -45,5 +49,11 @@
 }
 
 .modal-body {
-	height: 500px;
+	height: 400px;
 }
+
+.outside-svg {
+	min-height: 50px;
+	max-height: 200px;
+}
+
