--- a/app/assets/stylesheets/z_custom.css
+++ b/app/assets/stylesheets/z_custom.css
@@ -4,9 +4,25 @@
 }
 
 body {
-    padding-top: 0px;
-  }
+  padding-top: 0px;
+}
 
+@media (min-width: 981px) {
+  body {
+    padding-top: 60px;
+  }
+}
+
+@media (max-width: 980px){
+	#pano {
+		height: 300px;
+	}
+	.modal-body {
+		height: 300px;
+	}
+	
+	
+}
 
 #files {
     display:none;
@@ -33,7 +49,7 @@ body {
 	position: inline-block;
 	max-width: none;
 	width: auto; 
-	height: 300px;
+	height: 400px;
 	background-color: rgb(229,227,223);
 	margin-left: auto;
 	margin-right: auto;
@@ -56,4 +72,3 @@ body {
 	min-height: 50px;
 	max-height: 200px;
 }
-
