--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -45,7 +45,7 @@
 <div id="panoModal" class="modal hide fade"  aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Modal header</h3>
+    <h3 id="myModalLabel">Street View</h3>
   </div>
   <div class="modal-body">
 	  	  <div id="pano"></div> 
@@ -71,6 +71,8 @@ $(function(){
 	
 	CA.Helpers.GpxUploadView.initialize();
 	CA.Store.Map = L.map('map');
+	CA.Store.Map.dragging.disable();
+	CA.Store.Map.touchZoom.disable()
 	L.Icon.Default.imagePath = "/assets";
 	CA.Store.Marker = L.marker([0,0]).addTo(CA.Store.Map);
 	
