add geolocation recording framework

--- a/app/assets/stylesheets/gpxes.css.scss
+++ b/app/assets/stylesheets/gpxes.css.scss
@@ -4,9 +4,9 @@
 @import "bootstrap";
 @import "bootstrap-responsive"; 
 
-html {
-  overflow-y: scroll;
-}
+//html {
+//  overflow-y: scroll;
+//}
 
 body {
 font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
