--- a/app/assets/stylesheets/z_custom.css
+++ b/app/assets/stylesheets/z_custom.css
@@ -7,6 +7,7 @@ body {
   padding-top: 0px;
 }
 
+
 @media (min-width: 981px) {
   body {
     padding-top: 60px;
@@ -19,9 +20,7 @@ body {
 	}
 	.modal-body {
 		height: 300px;
-	}
-	
-	
+	}	
 }
 
 #files {
@@ -44,6 +43,13 @@ body {
 	color: black;
 	margin-left: 10px;
 }
+
+html {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
 
 #pano {
 	position: inline-block;
