--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -4,6 +4,7 @@
     <ul class="nav nav-tabs index-tab">
       <li class="active"><a href="#tab1" data-toggle="tab">Feed</a></li>
       <li><a href="#tab2" data-toggle="tab">Stats</a></li>
+	   <li><a href="#tab3" data-toggle="tab">Ride!</a></li>
     	  <li class="dropdown pull-right">
     	     <a class="dropdown-toggle"
     	        data-toggle="dropdown"
@@ -36,6 +37,7 @@
 			</div>	
 		</div>
     </div>
+	<div class="tab-pane" id="tab3"></div>
   </div>
 </div>
 
