--- a/app/assets/templates/gpx/geo_location.jst.ejs
+++ b/app/assets/templates/gpx/geo_location.jst.ejs
@@ -1,4 +1,5 @@
 <div class="geo-start btn">Start Recording!</div>
+<div class="geo-stop btn">Stop Recording!</div>
 <div>Lat: <div class="lat">0.0</div></div>
 <div>Lon: <div class="lon">0.0</div></div>
 <div>Ele: <div class="ele">0.0</div></div>
