--- a/app/views/gpxes/index.html.erb
+++ b/app/views/gpxes/index.html.erb
@@ -57,8 +57,24 @@
   </div>
 </div>
 
+
+<div id="geoModal" class="modal hide fade"  aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+    <h3 id="myModalLabel">Record Ride</h3>
+  </div>
+  <div class="modal-body geo-body">
+
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+  </div>
+</div>
+
+
 <div class='no-display'>
 	<a href="#panoModal" role="button" id="pano-modal-btn" class="btn" data-toggle="modal">Street View</a>
+	<a href="#geoModal" role="button" id="geo-modal-btn" class="btn" data-toggle="modal">Geo Loc</a>
 	<div id="canvas-div"></div>
 	<input type="file" id="files" name="file" />
 </div>
