rename to Open Ride

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CyclingApp</title>
+  <title>Open Ride</title>
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -14,7 +14,7 @@
 	<header id="user_nav" class="navbar navbar-fixed-top navbar-inverse">
 	      <div class="navbar-inner">
 	        <div class="container">
-	          <%= link_to "CyclingApp", '#', id: "logo" %>		  
+	          <%= link_to "Open Ride", '#', id: "logo" %>		  
 				  <% if user_signed_in? %>
 				  <ul class="nav pull-right">	 
 					  <li class="dropdown">
