--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,19 +15,19 @@
 	      <div class="navbar-inner">
 	        <div class="container">
 	          <%= link_to "Open Ride", '#', id: "logo" %>		  
-				  <% if user_signed_in? %>
+				  <%# if user_signed_in? %>
 				  <ul class="nav pull-right">	 
 					  <li class="dropdown">
 					     <a class="dropdown-toggle username"
 					        data-toggle="dropdown"
 					        href="#">
-					          <%= current_user.email %>
+					          <%= current_or_guest_user.email %>
 					         <b class="caret"></b>
 					       </a>
 					     <ul class="dropdown-menu">
-							<li> <%= link_to "Profile", "#" %> </li>
+							<!-- <li> <%= link_to "Profile", "#" %> </li>
 							<li> <%= link_to "Account", "#" %> </li>
-							<li> <%= link_to "Preferences", "#" %> </li>
+							<li> <%= link_to "Preferences", "#" %> </li> -->
 							<li>
 								<%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
 							</li>
@@ -39,7 +39,7 @@
 					   </li>
 
 	              </ul>
-				  <% end %>  
+				  <%# end %>  
 	        </div>
 	      </div>
 	</header>
